# polyglot-data-structure-benchmarks

./: .gitignore  Dockerfile  README.md  docker-compose.yml
benchmarks/: plot_results.py  plot_structure.py  plot_workload.py  run_all.sh  scenarios.md  workload_scenarios.md
cpp/: CMakeLists.txt
cpp/benchmarks/: bench_array.cpp  bench_common.hpp  bench_concurrency.cpp  bench_hashmap.cpp  bench_heap.cpp  bench_linked_list.cpp  bench_lru_cache.cpp
cpp/src/: dynamic_array.cpp  dynamic_array.hpp  hashmap.cpp  hashmap.hpp  heap.cpp  heap.hpp  linked_list.cpp  linked_list.hpp  lru_cache.cpp  lru_cache.hpp
cpp/tests/: test_all.cpp
docs/: design.md  findings.md  methodology.md
java/: checkstyle.xml  pom.xml
java/src/main/java/com/polyglot/: DynamicArray.java  HashMapCustom.java  Heap.java  LRUCache.java  LinkedList.java  MinHeap.java
python/: requirements.txt
python/benchmarks/: bench_array.py  bench_common.py  bench_concurrency.py  bench_hashmap.py  bench_heap.py  bench_linked_list.py  bench_lru_cache.py
python/src/: dynamic_array.py  hashmap.py  heap.py  linked_list.py  lru_cache.py
python/tests/: test_dynamic_array.py  test_hashmap.py  test_heap.py  test_linked_list.py  test_lru_cache.py
results/: DATA_STRUCTURES_SUMMARY.md  WORKLOAD_SUMMARY.md  analysis.md  hashmap_tests_findings.md
results/concurrency/: README.md  concurrency_findings.md
results/concurrency/raw/: cpp_concurrency.csv  java_concurrency.csv  rust_concurrency.csv
results/dynamic_array/: README.md  dynamic_array_findings.md
results/dynamic_array/raw/: cpp_dynamic_array.csv  python_dynamic_array.csv
results/hashmap/: README.md  hashmap_tests_findings.md
results/hashmap/raw/: cpp_hashmap.csv  cpp_hashmap_low_entropy.csv  java_hashmap.csv  java_hashmap_loadfactor.csv  java_hashmap_low_entropy.csv  python_hashmap.csv  python_hashmap_low_entropy.csv  rust_hashmap.csv  rust_hashmap_loadfactor.csv
results/heap/: README.md  heap_findings.md
results/heap/raw/: cpp_heap.csv  java_heap.csv  python_heap.csv  rust_heap.csv
results/linked_list/: README.md  linked_list_findings.md
results/linked_list/raw/: cpp_linked_list.csv  java_linked_list.csv  python_linked_list.csv  rust_linked_list.csv
results/lru_cache/: README.md  lru_cache_findings.md
results/lru_cache/raw/: cpp_lru_cache.csv  java_lru_cache.csv  python_lru_cache.csv  rust_lru_cache.csv  rust_native_lru_cache.csv
results/raw/: README.md  cpp_hashmap_loadfactor.csv  cpp_heap.csv  java_dynamic_array.csv  python_hashmap_loadfactor.csv  python_heap.csv  rust_dynamic_array.csv  rust_hashmap_low_entropy.csv
results/workloads/dynamic_array/: workload_dynamic_array_findings.md
results/workloads/dynamic_array/raw/: rust_workload_dynamic_array.csv
results/workloads/hashmap/: workload_hashmap_findings.md
results/workloads/hashmap/raw/: rust_workload_hashmap.csv
results/workloads/heap/: workload_heap_findings.md
results/workloads/heap/raw/: rust_workload_heap.csv
results/workloads/lru/: workload_lru_findings.md
results/workloads/lru/raw/: rust_workload_lru.csv
rust/: Cargo.toml
rust/benches/: bench_array.rs  bench_concurrency.rs  bench_hashmap.rs  bench_heap.rs  bench_linked_list.rs  bench_lru_cache.rs  bench_native_lru_cache.rs
rust/benches/workloads/: helpers.rs  workload_dynamic_array.rs  workload_hashmap.rs  workload_heap.rs  workload_lru.rs
rust/src/: bench_util.rs  dynamic_array.rs  hashmap.rs  heap.rs  lib.rs  linked_list.rs  lru_cache.rs
(+12 files in other folders)
