[package]
name = "polyglot-benchmarks"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ahash = "0.8"
lru = "0.16.3"
rustc-hash = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bench_array"
harness = false

[[bench]]
name = "bench_hashmap"
harness = false

[[bench]]
name = "bench_heap"
harness = false

[[bench]]
name = "bench_linked_list"
harness = false

[[bench]]
name = "bench_lru_cache"
harness = false

[[bench]]
name = "bench_native_lru_cache"
harness = false

[[bench]]
name = "bench_concurrency"
harness = false

[[bench]]
name = "workload_dynamic_array"
harness = false
path = "benches/workloads/workload_dynamic_array.rs"

[[bench]]
name = "workload_hashmap"
harness = false
path = "benches/workloads/workload_hashmap.rs"

[[bench]]
name = "workload_heap"
harness = false
path = "benches/workloads/workload_heap.rs"
